# SZE-MOSZE-2020-Hello_there

./: .gitignore  DockerFile  DungeonMaster.cpp  DungeonMaster.h  ExpectedObserverOut.txt  Game.cpp  Game.h  Hero.cpp  Hero.h  HeroSVGRenderer.cpp  HeroSVGRenderer.h  HeroTextRenderer.cpp  HeroTextRenderer.h  JSON.cpp  JSON.h  JsonParser.cpp  JsonParser.h  Makefile  Map.cpp  Map.h  MarkedMap.cpp  MarkedMap.h  Monster.cpp  Monster.h  ObserverSVGOut_2.txt  ObserverSVGRenderer.cpp  ObserverSVGRenderer.h  ObserverTextRenderer.cpp  ObserverTextRenderer.h  Player.cpp  Player.h  PreparedGame.cpp  PreparedGame.h  README.md  Renderer.h  Report.md  SVGRenderer.cpp  SVGRenderer.h  TextRenderer.cpp  TextRenderer.h  (+98 more)
.github/workflows/: BasicWorkflow.yml  DoxygenWorkflow.yml  GoogleTest.yml  PushDocs.yml  Workflow.yml  cppcheck.yml  valgrind.yml
games/: prepd_game_1.json  prepd_game_1.txt
maps/: map_1.txt  map_2.txt  marked_map.txt
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  enums_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  (+4 more)
tests/: CMakeLists.txt  UnitTests.cpp
units/: Blood_Raven.json  Dark_Wanderer.json  Fallen.json  Zombie.json  luke.json  luke_lookalike.json  luke_lookalike2.json  messy_unit.json  messy_unit2.json  messy_unit3.json  palpatine.json  palpatine_lookalike.json  palpatine_lookalike2.json  player.json  player_lookalike.json  player_lookalike2.json  vader.json  vader_lookalike.json  vader_lookalike2.json
